refactor: remove ratatui dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,10 @@ anyhow = "1.0.79"
 async-trait = "0.1.77"
 env_logger = "0.11.1"
 log = "0.4.20"
-termion = "3.0.0"
 clap = { version = "3.2", features = ["derive"] }
 tokio-fd = "0.3"
 shell-escape = "0.1"
-ratatui = "0.26.0"
+crossterm = "0.27.0"
 tui-textarea = "0.4.0"
 terminal-keycode = "1.1.1"
 ansi-to-tui = "4.0.1"
