feat: implement std::sync::mpsc for message handling and fix terminal scroll issue

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ fnv = "1.0.7"
 chrono = "0.4.38"
 humantime = "2.1.0"
 strum = { version = "0.26", features = ["derive"] }
+enum_dispatch = "0.3.13"
