--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ chrono = "0.4.38"
 humantime = "2.1.0"
 strum = { version = "0.26", features = ["derive"] }
 enum_dispatch = "0.3.13"
+circular-buffer = "0.1.7"
