--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,5 @@ clap = { version = "4.5.4", features = ["derive"] }
 dirs = "5.0.1"
 log4rs = "1.3.0"
 regex = "1.10.5"
+unicode-segmentation = "1.11.0"
+unicode-width = "0.1.13"
