--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,4 +41,7 @@ regex = "1.10.5"
 unicode-segmentation = "1.11.0"
 unicode-width = "0.1.13"
 lazy_static = "1.5.0"
+
+[dev-dependencies]
 assert_fs = "1.1.1"
+unic-emoji-char = "0.9.0"
