--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,6 @@ lazy_static = "1.5.0"
 assert_fs = "1.1.1"
 mockall = "0.13.0"
 unic-emoji-char = "0.9.0"
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
